--- a/chydozadrota2.html
+++ b/chydozadrota2.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Чудо Задрота</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4329605969713187"
+     crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Pushster&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="icon" href="icon.ico">
